[gd_scene load_steps=10 format=2]

[ext_resource path="res://root.gd" type="Script" id=1]
[ext_resource path="res://assets/materials/steve.tres" type="Material" id=2]
[ext_resource path="res://assets/models/steve.obj" type="ArrayMesh" id=3]
[ext_resource path="res://assets/font/Ubuntu-Light.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://env.tres" type="Environment" id=5]
[ext_resource path="res://assets/font/DynamicFont_Ubuntu.tres" type="DynamicFont" id=6]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=3]
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 7.5, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bg/progress:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 7.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 10, 10.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}

[node name="root" type="Spatial"]
script = ExtResource( 1 )

[node name="stairs_root" type="Spatial" parent="."]

[node name="player_root" type="Spatial" parent="."]

[node name="steve" type="MeshInstance" parent="player_root"]
mesh = ExtResource( 3 )
material/0 = ExtResource( 2 )

[node name="camera_root" type="Spatial" parent="player_root"]
transform = Transform( -0.866025, 0, -0.5, 0, 1, 0, 0.5, 0, -0.866025, 0, 0, 0 )

[node name="camera_pitch" type="Spatial" parent="player_root/camera_root"]

[node name="viewport" type="Camera" parent="player_root/camera_root/camera_pitch"]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, -10, 0, 0 )
environment = ExtResource( 5 )
fov = 90.0

[node name="title" type="Control" parent="player_root/camera_root/camera_pitch/viewport"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="ColorRect" parent="player_root/camera_root/camera_pitch/viewport/title"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="player_root/camera_root/camera_pitch/viewport/title/bg"]
anchor_right = 1.0
anchor_bottom = 0.48
custom_fonts/font = SubResource( 1 )
text = "The Fall: Infinite"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="desc" type="Label" parent="player_root/camera_root/camera_pitch/viewport/title/bg"]
anchor_top = 0.52
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.18921
margin_right = 40.0
margin_bottom = 12.8108
custom_fonts/font = SubResource( 2 )
text = "Inspired by \"The Fall\" by ps1nk4.
All assets belong to respective copyright holders.
Press LMB to lock/unlock mouses and look around.
Press RMB to show HUD.
This title will disappear shortly.
Enjoy."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="progress" type="ColorRect" parent="player_root/camera_root/camera_pitch/viewport/title/bg"]
anchor_top = 0.49
anchor_right = 1.0
anchor_bottom = 0.49
margin_bottom = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="titlecard_hide" type="AnimationPlayer" parent="player_root/camera_root/camera_pitch/viewport/title"]
anims/hide = SubResource( 3 )

[node name="hud" type="Control" parent="player_root/camera_root/camera_pitch/viewport"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left" type="VBoxContainer" parent="player_root/camera_root/camera_pitch/viewport/hud"]
anchor_right = 0.3
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sensitivity_caption" type="Label" parent="player_root/camera_root/camera_pitch/viewport/hud/left"]
margin_right = 297.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 6 )
text = "Sensitivity [1.0]"

[node name="sensitivity_slider" type="HSlider" parent="player_root/camera_root/camera_pitch/viewport/hud/left"]
margin_top = 27.0
margin_right = 297.0
margin_bottom = 43.0
min_value = 0.1
max_value = 5.0
step = 0.01
value = 1.0

[node name="timescale_label" type="Label" parent="player_root/camera_root/camera_pitch/viewport/hud/left"]
margin_top = 47.0
margin_right = 297.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 6 )
text = "Time scale [1.0]"

[node name="timescale_slider" type="HSlider" parent="player_root/camera_root/camera_pitch/viewport/hud/left"]
margin_top = 74.0
margin_right = 297.0
margin_bottom = 90.0
min_value = 0.1
max_value = 10.0
step = 0.1
value = 1.0

[node name="bounsieness_label" type="Label" parent="player_root/camera_root/camera_pitch/viewport/hud/left"]
margin_top = 94.0
margin_right = 297.0
margin_bottom = 117.0
custom_fonts/font = ExtResource( 6 )
text = "Bounceiness [1.0]"

[node name="bounseiness_slider" type="HSlider" parent="player_root/camera_root/camera_pitch/viewport/hud/left"]
margin_top = 121.0
margin_right = 297.0
margin_bottom = 137.0
min_value = 1.0
max_value = 25.0
step = 0.1
value = 1.0

[node name="enable_dof" type="CheckButton" parent="player_root/camera_root/camera_pitch/viewport/hud/left"]
margin_top = 141.0
margin_right = 297.0
margin_bottom = 181.0
custom_fonts/font = ExtResource( 6 )
pressed = true
text = "Enable DOF"

[node name="enable_sounds" type="CheckButton" parent="player_root/camera_root/camera_pitch/viewport/hud/left"]
margin_top = 185.0
margin_right = 297.0
margin_bottom = 225.0
custom_fonts/font = ExtResource( 6 )
pressed = true
text = "Enable Sounds"

[node name="right" type="VBoxContainer" parent="player_root/camera_root/camera_pitch/viewport/hud"]
anchor_left = 0.7
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controls" type="Label" parent="player_root/camera_root/camera_pitch/viewport/hud/right"]
margin_right = 297.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 6 )
text = "MOUSE2 - Toggle these settings
MOUSE1 - Toggle mouse lock
MOUSE Wheel - Zoom"
align = 2

[node name="player" type="AudioStreamPlayer" parent="."]

[node name="env" type="WorldEnvironment" parent="."]
environment = ExtResource( 5 )

[node name="sun" type="DirectionalLight" parent="."]
transform = Transform( 0.931055, -0.34298, -0.124499, -0.087772, -0.541716, 0.835967, -0.354163, -0.767404, -0.534472, 0, 0, 0 )
shadow_enabled = true
[connection signal="value_changed" from="player_root/camera_root/camera_pitch/viewport/hud/left/sensitivity_slider" to="." method="_on_sensitivity_slider_value_changed"]
[connection signal="value_changed" from="player_root/camera_root/camera_pitch/viewport/hud/left/timescale_slider" to="." method="_on_timescale_slider_value_changed"]
[connection signal="value_changed" from="player_root/camera_root/camera_pitch/viewport/hud/left/bounseiness_slider" to="." method="_on_bounseiness_slider_value_changed"]
[connection signal="toggled" from="player_root/camera_root/camera_pitch/viewport/hud/left/enable_dof" to="." method="_on_enable_dof_toggled"]
[connection signal="toggled" from="player_root/camera_root/camera_pitch/viewport/hud/left/enable_sounds" to="." method="_on_enable_sounds_toggled"]
